service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-registry-center-svc
  labels:
    name: service-registry-center-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    name: service-registry-center
